failed attempt to fix overfitting (train acc = 0.99, test acc = 0.74)

--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "[10000 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "5340"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4660"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "494"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "[9506 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "5030"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "4476"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Name: tokenize, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -661,29 +661,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>[also, few, people, remember, that, post, yola...</td>\n",
-       "      <td>[also, few, people, remember, that, post, yola...</td>\n",
+       "      <th>72</th>\n",
+       "      <td>[salamat, camp, we, fought, a, good, fight, gu...</td>\n",
+       "      <td>[salamat, camp, we, fought, a, good, fight, gu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2649</th>\n",
-       "      <td>[si, binay, be]</td>\n",
-       "      <td>[si, binay, be]</td>\n",
+       "      <th>2567</th>\n",
+       "      <td>[mar, roxas]</td>\n",
+       "      <td>[mar, roxas]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8857</th>\n",
-       "      <td>[poe, miriam, roxas, and, duterte, hmm, mabigat]</td>\n",
-       "      <td>[poe, miriam, roxas, and, duterte, hmm, mabigat]</td>\n",
+       "      <th>5466</th>\n",
+       "      <td>[notice, the, similarities, yes, both, are, st...</td>\n",
+       "      <td>[notice, the, similarity, yes, both, are, stupid]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6892</th>\n",
-       "      <td>[patawarin, nio, n, tatlong, bayan, binay, bae...</td>\n",
-       "      <td>[patawarin, nio, n, tatlong, bayan, binay, bae...</td>\n",
+       "      <th>5974</th>\n",
+       "      <td>[naiirita, ads, mar, roxas, idk, whyy]</td>\n",
+       "      <td>[naiirita, ad, mar, roxas, idk, whyy]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8663</th>\n",
-       "      <td>[there, is, so, much, commotion, in, facebook,...</td>\n",
-       "      <td>[there, is, so, much, commotion, in, facebook,...</td>\n",
+       "      <th>8368</th>\n",
+       "      <td>[duterte, for, president, and, defensor, for, ...</td>\n",
+       "      <td>[duterte, for, president, and, defensor, for, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -691,21 +691,21 @@
       ],
       "text/plain": [
        "                                               tokenize   \n",
-       "555   [also, few, people, remember, that, post, yola...  \\\n",
-       "2649                                    [si, binay, be]   \n",
-       "8857   [poe, miriam, roxas, and, duterte, hmm, mabigat]   \n",
-       "6892  [patawarin, nio, n, tatlong, bayan, binay, bae...   \n",
-       "8663  [there, is, so, much, commotion, in, facebook,...   \n",
+       "72    [salamat, camp, we, fought, a, good, fight, gu...  \\\n",
+       "2567                                       [mar, roxas]   \n",
+       "5466  [notice, the, similarities, yes, both, are, st...   \n",
+       "5974             [naiirita, ads, mar, roxas, idk, whyy]   \n",
+       "8368  [duterte, for, president, and, defensor, for, ...   \n",
        "\n",
        "                                          lematize_nltk  \n",
-       "555   [also, few, people, remember, that, post, yola...  \n",
-       "2649                                    [si, binay, be]  \n",
-       "8857   [poe, miriam, roxas, and, duterte, hmm, mabigat]  \n",
-       "6892  [patawarin, nio, n, tatlong, bayan, binay, bae...  \n",
-       "8663  [there, is, so, much, commotion, in, facebook,...  "
+       "72    [salamat, camp, we, fought, a, good, fight, gu...  \n",
+       "2567                                       [mar, roxas]  \n",
+       "5466  [notice, the, similarity, yes, both, are, stupid]  \n",
+       "5974              [naiirita, ad, mar, roxas, idk, whyy]  \n",
+       "8368  [duterte, for, president, and, defensor, for, ...  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "True"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "9505  [preliminary, and, partial, result, come, in, ...  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,33 +1491,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Define the parameter grid\n",
+    "param_grid = {'C': [0.1, 1, 10, 100], \n",
+    "              'gamma': [0.1, 1, 10]}\n",
+    "\n",
+    "# Create a SVM model\n",
+    "svm_model = SVC()\n",
+    "\n",
+    "# Create a GridSearchCV object\n",
+    "grid_search = GridSearchCV(svm_model, param_grid, cv=5)\n",
+    "\n",
+    "# Train the model using GridSearchCV\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Get the best hyperparameters\n",
+    "best_params = grid_search.best_params_\n",
+    "\n",
+    "# Create a new SVM model using the best hyperparameters\n",
+    "svm_model = SVC(C=best_params['C'], gamma=best_params['gamma'])\n",
+    "\n",
+    "# Train the new model\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Dump the trained SVM model to a file using joblib\n",
+    "joblib.dump(svm_model, 'svm_model.joblib')\n",
+    "joblib.dump(vectorizer, 'tfidf_vectorizer.joblib')\n",
+    "\n",
+    "\n",
+    "# Test the model on the testing set\n",
+    "y_pred = svm_model.predict(X_test)\n",
+    "y_train_pred = svm_model.predict(X_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Accuracy using metrics.accuracy_score(): 0.9667868951006913\n",
-      "Test Data Accuracy using metrics.accuracy_score(): 0.7433380084151473\n",
-      "Precision using metrics.precision_score(): 0.7819287576020851\n",
-      "Recall using metrics.recall_score(): 0.6517016654598118\n"
+      "Training Data Accuracy: 0.9902314397354974\n",
+      "Test Data Accuracy: 0.7436886395511921\n",
+      "Precision: 0.7717391304347826\n",
+      "Recall: 0.6683562635771181\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import metrics\n",
-    "# Train the SVM model\n",
-    "clf = svm.SVC()\n",
-    "clf.fit(X_train, y_train)\n",
+    "# Evaluate the model's performance\n",
+    "accuracy = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "print(\"Training Data Accuracy:\", accuracy)\n",
     "\n",
-    "# Dump the trained SVM model to a file using joblib\n",
-    "joblib.dump(clf, 'svm_model.joblib')\n",
-    "joblib.dump(vectorizer, 'tfidf_vectorizer.joblib')\n",
+    "# Evaluate the model's performance\n",
+    "accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Test Data Accuracy:\", accuracy)\n",
     "\n",
-    "# Test the model on the testing set\n",
-    "y_pred = clf.predict(X_test)\n",
-    "y_train_pred = clf.predict(X_train)\n",
+    "# Evaluate the model's performance\n",
+    "precision = metrics.precision_score(y_test, y_pred)\n",
+    "print(\"Precision:\", precision)\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "recall = metrics.recall_score(y_test, y_pred)\n",
+    "print(\"Recall:\", recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn import metrics\n",
+    "# # Train the SVM model\n",
+    "# clf = svm.SVC()\n",
+    "# clf.fit(X_train, y_train)\n",
+    "\n",
+    "# # Dump the trained SVM model to a file using joblib\n",
+    "# joblib.dump(clf, 'svm_model.joblib')\n",
+    "# joblib.dump(vectorizer, 'tfidf_vectorizer.joblib')\n",
+    "\n",
+    "# # Test the model on the testing set\n",
+    "# y_pred = clf.predict(X_test)\n",
+    "# y_train_pred = clf.predict(X_train)\n",
     "\n",
     "# # Evaluate the model's performance\n",
     "# accuracy = clf.score(X_test, y_test)\n",
@@ -1527,56 +1591,34 @@
     "# accuracy = clf.score(X_train, y_train)\n",
     "# print(\"Accuracy (X_train, y_train):\", accuracy)\n",
     "\n",
-    "# Evaluate the model's performance\n",
-    "accuracy = metrics.accuracy_score(y_train, y_train_pred)\n",
-    "print(\"Training Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
+    "# # Evaluate the model's performance\n",
+    "# accuracy = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "# print(\"Training Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
     "\n",
-    "# Evaluate the model's performance\n",
-    "accuracy = metrics.accuracy_score(y_test, y_pred)\n",
-    "print(\"Test Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
+    "# # Evaluate the model's performance\n",
+    "# accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "# print(\"Test Data Accuracy using metrics.accuracy_score():\", accuracy)\n",
     "\n",
-    "# Evaluate the model's performance\n",
-    "precision = metrics.precision_score(y_test, y_pred)\n",
-    "print(\"Precision using metrics.precision_score():\", precision)\n",
+    "# # Evaluate the model's performance\n",
+    "# precision = metrics.precision_score(y_test, y_pred)\n",
+    "# print(\"Precision using metrics.precision_score():\", precision)\n",
     "\n",
-    "# Evaluate the model's performance\n",
-    "recall = metrics.recall_score(y_test, y_pred)\n",
-    "print(\"Recall using metrics.recall_score():\", recall)"
+    "# # Evaluate the model's performance\n",
+    "# recall = metrics.recall_score(y_test, y_pred)\n",
+    "# print(\"Recall using metrics.recall_score():\", recall)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tfidf_vectorizer.joblib']"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "joblib.dump(clf, 'svm_model.joblib')\n",
-    "\n",
-    "joblib.dump(vectorizer, 'tfidf_vectorizer.joblib')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainginamo\n",
-      "Positive sentiment\n"
+      "tanginang accuracy yan\n",
+      "Negative Statement\n"
      ]
     }
    ],
