modularized components for pyscript integration

--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -1626,6 +1626,7 @@
     "import string\n",
     "import re\n",
     "import urllib.request, json\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
