--- a/ThesisLogic.ipynb
+++ b/ThesisLogic.ipynb
@@ -1610,15 +1610,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tanginang accuracy yan\n",
-      "Negative Statement\n"
+      "ang saya naman dito\n",
+      "Positive sentiment\n"
      ]
     }
    ],
